Fix button spacing in WikiGrok for iOS

--- a/less/modules/wikigrok/WikiGrokDialog.less
+++ b/less/modules/wikigrok/WikiGrokDialog.less
@@ -47,7 +47,7 @@
 		// For enwiki prototype only
 		.yes,
 		.no {
-			width: 72px;
+			width: 70px;
 		}
 	}
 
